fixes anchor issue on mobile

--- a/styles/BlogPost.module.scss
+++ b/styles/BlogPost.module.scss
@@ -62,9 +62,7 @@
 }
 
 @media screen and (max-width: 1024px) {
-    .mainSection {
-        .anchorList {
-            display: none;
-        }
+    .mainSection .anchorList {
+        display: none;
     }
 }
